# urban-canopy-detection

./: .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: DEPLOY.md  README.md  app.py  requirements.txt
app/static/: README.md  index.html
data/coco_smoke/train/: _annotations.coco.json
data/coco_smoke/valid/: _annotations.coco.json
data/yolo_smoke/: data.yaml
data/yolo_smoke/labels/: train.cache  val.cache
data/yolo_smoke/labels/train/: 2018_SJER_3_252000_4104000_image_628_x0_y0.txt  2018_SJER_3_252000_4104000_image_628_x0_y80.txt  2018_SJER_3_252000_4104000_image_628_x80_y0.txt  2018_SJER_3_252000_4104000_image_628_x80_y80.txt
data/yolo_smoke/labels/val/: BLAN_005_2019_x0_y0.txt  BLAN_005_2019_x0_y80.txt  BLAN_005_2019_x80_y0.txt  BLAN_005_2019_x80_y80.txt
docs/geo/: canopy_density.gpkg
notebooks/: 01_train_yolo26.ipynb  02_train_rfdetr.ipynb
results/: metrics.json  table.md
scripts/: download_neon.py  export_onnx.py  make_figures.py  make_results_table.py  run_baseline.py  sahi_effect.py  train_rfdetr.py  train_yolo.py
src/urban_canopy/: __init__.py  cli.py  dataset.py  evaluate.py  geo.py  labels.py  predictions.py  sliced.py  splits.py  tiling.py
tests/: test_cli.py  test_dataset.py  test_evaluate.py  test_geo.py  test_labels.py  test_predictions.py  test_sliced.py  test_splits.py  test_tiling.py  test_train_smoke.py
tests/fixtures/: 2019_TEAK_4_315000_4094000_image_crop.xml
