[project]
name = "urban-canopy-detection"
version = "0.1.0"
description = "Tree-crown detection on aerial imagery: YOLO26 and RF-DETR vs a published DeepForest baseline on the NEON benchmark, with leakage-safe splits and geospatial outputs"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.1.4",
    "pillow>=12.3.0",
    "pyyaml>=6.0.3",
    "rasterio>=1.5.0",
    "requests>=2.34.2",
    "shapely>=2.1.2",
    "typer>=0.27.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12",
    "mypy>=1.16",
    "pytest>=8.3",
    "pytest-cov>=6.1",
    "types-requests>=2.33.0.20260712",
    "types-pyyaml>=6.0.12.20260518",
    "numpy>=2.5.1",
]

[project.scripts]
canopy = "urban_canopy.cli:app"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/urban_canopy"]

[tool.ruff]
line-length = 100
target-version = "py312"
# Notebooks run top-to-bottom with mid-cell imports after environment setup;
# they are validated by executing on the T4, not by lint.
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
    "PT",  # flake8-pytest-style
    "RET", # flake8-return
    "RUF", # ruff-specific
]

[tool.mypy]
strict = true
files = ["src"]

[[tool.mypy.overrides]]
# Geospatial + vision stacks ship no type stubs; their objects are wrapped at
# narrow, explicitly annotated boundaries in this package.
module = ["geopandas.*", "rasterio.*", "shapely.*", "PIL.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=urban_canopy --cov-report=term-missing"

[tool.coverage.run]
source = ["src/urban_canopy"]
